--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,22 @@
-<% if notice %>
-<aside id="notice"><%= notice %></aside>
-<% end %>
-<h2>Your Pragmatic Cart</h2>
-<ul>
-<% @cart.line_items.each do |item| %>
-<li><%= item.product.title %></li>
-<% end %>
-</ul>
+<article>
+    <% if notice %>
+        <aside id="notice"><%= notice %></aside>
+    <% end %>
+    <h2>Your Cart</h2>
+    <table>
+        <%= render @cart %>
+        <tfoot>
+            <tr>
+                <td ></td>
+                <td></td>
+                <td>======</td>
+            </tr>
+            <tr>
+                <th colspan="2">Total:</th>
+                <td class="price"><%= number_to_currency(@cart.total_price) %></td>
+            </tr>
+        </tfoot>
+    </table>
+    <%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' } %>
+</article>
+
