--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,17 @@
       <%= image_tag 'logo.jpg', alt: 'The Pragmatic Bookshelf' %>
       <h1><%= @page_title %></h1>
       <div class= "time">It time is: <%= @time%></div>
+      
     </header>
 
     <section class="content">
       <nav class="side_nav">
+        <% if @cart %>
+          <div id="cart" class="carts">
+          <%= render @cart %>
+        </div>
+        <% end %>
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
