--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,7 +101,7 @@ header.main {
 }
 #cart {
     article {
-        width: 200px;
+        width: 250px;
         h2 {
             margin-top: 0;
         }
@@ -220,3 +220,24 @@ header.main {
         }
     }
 }
+nav.logged_in_nav {
+    border-top: solid thin #bfb;
+    padding: 0.354em 0;
+    margin-top: 0.354em;
+    input[type="submit"] {
+        // Make the logout button look like a
+        // link, so it matches the nav style
+        background: none;
+        border: none;
+        color: #bfb;
+        font-size: 1em;
+        letter-spacing: 0.354em;
+        margin: 0;
+        padding: 0;
+        text-transform: uppercase;
+    }
+
+    input[type="submit"]:hover {
+        color: white;
+    }
+    }
