--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -3,7 +3,7 @@
         <% if notice %>
             <aside id="notice"><%= notice %></aside>
         <% end %>
-        <h2>Your Cart</h2>
+        <h2><%= t('.title') %></h2>
         <table>
             <%= render(cart.line_items) %>
             <tfoot>
@@ -15,10 +15,11 @@
         </table>
         
         <div class="actions">
-            <%= button_to 'Empty cart', cart,
+            <%= button_to t('.empty'), cart,
                 method: :delete,
                 data: { confirm: 'Are you sure?' } %>
-            <%= button_to 'Checkout', new_order_path,
+                
+            <%= button_to t('.checkout'), new_order_path(locale: I18n.locale),
                 method: :get,
                 class: "checkout"%>
         </div>
