--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div class= "count">Count of hits store: <%= $counter %></div>
-<h1>Your Pragmatic Catalog</h1>
+<h1><%= t('.title_html') %></h1>
 <ul class="catalog">    
     <% cache @products do %>
         <% @products.each do |product| %>
@@ -16,7 +16,7 @@
                     </p>
                     <div class="price">
                         <%= number_to_currency(product.price) %>
-                        <%= button_to 'Add to Cart', line_items_path(product_id: product),
+                        <%= button_to t('.add_html'), line_items_path(product_id: product),
                         remote: true %>
                     </div>
               </li>
